# xiaozhi

./: .gitignore  partitions_8M.csv  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  application.cc  background_task.cc  main.cc  mcp_server.cc  mcp_server.h  ota.cc  settings.cc
main/audio/: audio_codec.h  audio_service.cc
main/audio/codecs/: box_audio_codec.cc  box_audio_codec.h  es8311_audio_codec.cc  es8311_audio_codec.h  es8374_audio_codec.cc  i2s_es7210_audio_codec.cc  i2s_es7210_audio_codec.h
main/audio/processors/: afe_audio_processor.cc
main/audio_codecs/: audio_codec.cc  audio_codec.h  es8311_audio_codec.cc  es8311_audio_codec.h  no_audio_codec.cc  no_audio_codec.h
main/audio_processing/: afe_audio_processor.cc  wake_word_detect.cc
main/boards/bread-compact-wifi/: config.json
main/boards/bread-compact-wifi-lcd/: compact_wifi_board_lcd.cc
main/boards/bread-compact-wifi-s3cam/: compact_wifi_board_s3cam.cc
main/boards/bread-my-board/: README.md  config.h  config.json  my_board.cc  my_board_lcd.cc
main/boards/common/: board.h  esp32_camera.cc  sy6970.cc  wifi_board.cc
main/boards/minsi-k08-dual/: minsi_k08_dual.cc
main/boards/my-board/: config.h  my_board_lcd.cc
main/boards/your_board/: config.h
main/display/: CMakeLists.txt  display.cc  lcd_display.cc  lcd_display.h  oled_display.cc
partitions/v1/: 8m.csv
scripts/p3_tools/: audio_to_p3_ffmpeg.py  music.p3  test.p3  verify_p3.py
xiaozhi-esp32-main/main/: application.cc  background_task.cc
